# Omni-Grid

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.bat  build.pl  cpm_install.json  setup.bat  setup.pl
.circleci/: config.yml
.github/workflows/: build_windows_msvc_debug.yml  build_windows_msvc_release.yml
Deprecated/: core_copy_missing_dlls.pl
Docs/: build.md  cpm.md  setup.md  source.md  testing.md
Docs/html/: _button_8h.html  _button_8h_source.html  _checkers_8cpp.html  _checkers_8h.html  _checkers_8h_source.html  _checkers_pieces_8h.html  _checkers_pieces_8h_source.html  _checkers_state_check_8h_source.html  _connect_four_8cpp.html  _connect_four_8h_source.html  _connect_four_pieces_8h.html  _connect_four_pieces_8h_source.html  _connect_four_state_check_8h.html  _connect_four_state_check_8h_source.html  _g_u_i_info_8h.html  _g_u_i_info_8h_source.html  _game_configuration_8cpp.html  _game_configuration_8h.html  _game_configuration_8h_source.html  _game_initializer_8h.html  _game_initializer_8h_source.html  _game_state_checker_8h.html  _game_state_checker_8h_source.html  _game_state_extensions_8h.html  _game_state_extensions_8h_source.html  _game_window_8cpp.html  _game_window_8h.html  _game_window_8h_source.html  _grid_8cpp.html  _grid_8h.html  _grid_8h_source.html  _i_attack_rule_8h.html  _i_attack_rule_8h_source.html  _i_game_8h.html  _i_game_8h_source.html  _i_game_state_8h.html  _i_game_state_8h_source.html  _i_move_rule_8h.html  _i_move_rule_8h_source.html  _piece_8h.html  (+102 more)
Docs/latex/: _button_8h.tex  _button_8h_source.tex  _checkers_8cpp.tex  _checkers_8h.tex  _checkers_8h_source.tex  _checkers_state_check_8h.tex  _checkers_state_check_8h_source.tex  _connect_four_pieces_8cpp.tex  _connect_four_pieces_8h.tex  _connect_four_state_check_8h.tex  _g_u_i_info_8h.tex  _g_u_i_info_8h_source.tex  _game_configuration_8cpp.tex  _game_configuration_8h.tex  _game_configuration_8h_source.tex  _game_initializer_8h.tex  _game_initializer_8h_source.tex  _game_state_checker_8h.tex  _game_state_checker_8h_source.tex  _game_state_extensions_8cpp.tex  _game_state_extensions_8h.tex  _game_state_extensions_8h_source.tex  _game_window_8h.tex  _game_window_8h_source.tex  _grid_8cpp.tex  _grid_8h.tex  _grid_8h_source.tex  _i_attack_rule_8h.tex  _i_attack_rule_8h_source.tex  _i_game_8h.tex  _i_game_8h_source.tex  _i_game_state_8h.tex  _i_game_state_8h_source.tex  _i_move_rule_8h.tex  _i_move_rule_8h_source.tex  _p_c_h_8h.tex  _piece_8cpp.tex  _piece_8h.tex  _piece_8h_source.tex  _piece_rules_8cpp.tex  (+89 more)
Documentation/: Framework.drawio  Omni-Grid Software Engineering PI21E Vitold Skuder Nazar Lavkart Sebastian Termen.docx  Project.docx  User_ERD.drawio  source.md
Documentation/html/: _button_8h.html  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  _button_8h__incl.map  _button_8h__incl.md5  _button_8h_source.html  _checkers_8cpp.html  _checkers_8cpp__incl.map  _checkers_8cpp__incl.md5  _checkers_8h.html  _checkers_8h__dep__incl.map  _checkers_8h__dep__incl.md5  _checkers_8h__incl.map  _checkers_8h__incl.md5  _checkers_8h_source.html  _checkers_pieces_8cpp.html  _checkers_pieces_8cpp__incl.map  _checkers_pieces_8cpp__incl.md5  _checkers_pieces_8h.html  _checkers_pieces_8h__dep__incl.map  _checkers_pieces_8h__dep__incl.md5  _checkers_pieces_8h__incl.map  _checkers_pieces_8h__incl.md5  _checkers_pieces_8h_source.html  _checkers_state_check_8cpp.html  _checkers_state_check_8cpp__incl.map  _checkers_state_check_8cpp__incl.md5  _checkers_state_check_8h.html  _checkers_state_check_8h__dep__incl.map  _checkers_state_check_8h__dep__incl.md5  _checkers_state_check_8h__incl.map  _checkers_state_check_8h__incl.md5  _checkers_state_check_8h_source.html  _connect_four_8cpp.html  _connect_four_8cpp__incl.map  _connect_four_8cpp__incl.md5  _connect_four_8h.html  _connect_four_8h__dep__incl.map  _connect_four_8h__dep__incl.md5  _connect_four_8h__incl.map  (+611 more)
Documentation/latex/: _button_8h.tex  _button_8h__dep__incl.md5  _button_8h__incl.md5  _button_8h_source.tex  _checkers_8cpp.tex  _checkers_8cpp__incl.md5  _checkers_8h.tex  _checkers_8h__dep__incl.md5  _checkers_8h__incl.md5  _checkers_8h_source.tex  _checkers_pieces_8cpp.tex  _checkers_pieces_8cpp__incl.md5  _checkers_pieces_8h.tex  _checkers_pieces_8h__dep__incl.md5  _checkers_pieces_8h__incl.md5  _checkers_pieces_8h_source.tex  _checkers_state_check_8cpp.tex  _checkers_state_check_8cpp__incl.md5  _checkers_state_check_8h.tex  _checkers_state_check_8h__dep__incl.md5  _checkers_state_check_8h__incl.md5  _connect_four_8cpp.tex  _connect_four_8cpp__incl.md5  _connect_four_8h.tex  _connect_four_8h__dep__incl.md5  _connect_four_8h__incl.md5  _connect_four_8h_source.tex  _connect_four_pieces_8cpp.tex  _connect_four_pieces_8cpp__incl.md5  _connect_four_pieces_8h.tex  _connect_four_pieces_8h__dep__incl.md5  _connect_four_pieces_8h__incl.md5  _connect_four_pieces_8h_source.tex  _connect_four_state_check_8cpp.tex  _connect_four_state_check_8cpp__incl.md5  _connect_four_state_check_8h.tex  _connect_four_state_check_8h__dep__incl.md5  _database_8cpp.tex  (+294 more)
Examples/BoostPython/: CMakeLists.txt  HelloPythonLibraries.cpp
Examples/Framework/: CMakeLists.txt  HelloFramework.cpp  HelloFrameworkLibs.cpp
Examples/GTK/: CMakeLists.txt
Examples/Raylib/: CMakeLists.txt  HelloRaylib.cpp
Tests/: CMakeLists.txt
Tests/Framework/GameLogic/: CMakeLists.txt  GameConfigurationTest.cpp  GameLogicTest.cpp  GameStateExtensionsTest.cpp
Tests/Framework/Grid/: CMakeLists.txt  GridTest.cpp
Tests/Framework/Player/: CMakeLists.txt  PieceTest.cpp  PlayerTest.cpp
Tests/Framework/hello-test/: CMakeLists.txt  HelloFramework.cpp
Tests/Games/Checkers/: CMakeLists.txt  CheckersTest.cpp
Tests/Games/ConnectFour/: CMakeLists.txt  ConnectFourTest.cpp
Tests/Games/TicTacToe/: CMakeLists.txt  TicTacToeTest.cpp
deprecated/: core_copy_missing_dlls.cmake
docs/: source.md
examples/: CMakeLists.txt
examples/BoostPython/: CMakeLists.txt  HelloBoostPythonExe.cpp  HelloBoostPythonLib.cpp
tests/: CMakeLists.txt
utils/: build.bat  build.py
(+287 files in other folders)
